@@ -6,6 +6,11 @@ PHP                                                                        NEWS
   . Fixed bug GH-18641 (Accessing a BcMath\Number property by ref crashes).
     (nielsdos)
 
+- Core:
+  . Fixed bugs GH-17711 and GH-18022 (Infinite recursion on deprecated attribute
+    evaluation) and GH-18464 (Recursion protection for deprecation constants not
+    released on bailout). (DanielEScherzer and ilutov)
+
 - Intl:
   . Fix memory leak in intl_datetime_decompose() on failure. (nielsdos)
 
